# ubuntu-ui-extras

./: .bzrignore  CMakeLists.txt  README  lomiri-ui-extras.qmlproject
debian/: changelog  control  copyright  qtdeclarative5-ubuntu-ui-extras-plugin-autopilot.install  qtdeclarative5-ubuntu-ui-extras-plugin.install  rules  webbrowser-app.install
modules/Ubuntu/Components/Extras/: Browser.qml  CMakeLists.txt  Example.qml  PhotoEditor.qml  Share.qml  TabsBar.qml  qmldir
modules/Ubuntu/Components/Extras/Browser/: Suggestions.qml
modules/Ubuntu/Components/Extras/Browser/po/: ar.po  ca.po  en_AU.gmo  es.po  fi.gmo  fr.po  gd.po  gl.gmo  it.gmo  my.po  pl.po  pt_BR.gmo  pt_BR.po  sl.gmo  sl.po  sr.po  uk.gmo  uk.po  uz.gmo  vi.gmo  webbrowser-plugin.pot  zh_CN.gmo  zh_CN.po  zh_HK.gmo  zh_HK.po  zh_TW.po
modules/Ubuntu/Components/Extras/Example/: ExampleDelegate.qml  PrinterQueue.qml  Printers.qml  Suggestions.qml
modules/Ubuntu/Components/Extras/Example/po/: ar.gmo  de.po  en_AU.po  fi.po  gd.gmo  gl.po  he.gmo  he.po  hi.po  hu.po  it.po  ko.po  lv.po  nb.gmo  nb.po  ru.gmo  ru.po  tr.gmo  tr.po  uz.po  vi.po
modules/Ubuntu/Components/Extras/PhotoEditor/: ActionsBar.qml  BusyIndicator.qml  CMakeLists.txt  CropCorner.qml  CropDragArea.qml  CropInteractor.qml  CropOverlay.qml  EditStack.qml  EditorAction.qml  ExifOrientation.qml  ExposureAdjuster.qml  FunctionStateSaver.qml  FunctionTransform.qml  GraphicsRoutines.js
modules/Ubuntu/Components/Extras/Printers/: CMakeLists.txt  enums.h  i18n.cpp  i18n.h  org.cups.cupsd.Notifier.xml  plugin.cpp  plugin.h  printers_global.h  qmldir  structs.h  utils.h
modules/Ubuntu/Components/Extras/Printers/backend/: backend.cpp  backend.h  backend_cups.cpp  backend_cups.h  backend_pdf.cpp  backend_pdf.h
modules/Ubuntu/Components/Extras/Printers/cups/: devicesearcher.cpp  devicesearcher.h  ippclient.cpp  ippclient.h  jobloader.cpp  jobloader.h  printerdriverloader.cpp  printerdriverloader.h  printerloader.cpp  printerloader.h
modules/Ubuntu/Components/Extras/Printers/models/: devicemodel.cpp  devicemodel.h  drivermodel.cpp  drivermodel.h  jobmodel.cpp  jobmodel.h  printermodel.cpp  printermodel.h
modules/Ubuntu/Components/Extras/Printers/printer/: printer.cpp  printer.h  printerjob.cpp  printerjob.h  printersignalhandler.cpp  printersignalhandler.h  signalratelimiter.cpp  signalratelimiter.h
modules/Ubuntu/Components/Extras/Printers/printers/: printers.cpp  printers.h
modules/Ubuntu/Components/Extras/Share/: CMakeLists.txt  ExampleDelegate.qml  ShareMenu.qml  SharePopover.qml
modules/Ubuntu/Components/Extras/TabsBar/: CMakeLists.txt  DragAndDropSettings.qml  Tab.qml  TabContour.qml  TabContourHalf.qml
modules/Ubuntu/Components/Extras/plugin/: CMakeLists.txt  components.cpp  components.h
modules/Ubuntu/Components/Extras/plugin/example/: example-model.cpp  example-model.h
modules/Ubuntu/Components/Extras/plugin/photoeditor/: file-utils.cpp  file-utils.h  generator_transform.cpp  halide_common.h  halide_generators_common.h  imaging.cpp  imaging.h  orientation.cpp  orientation.h  photo-caches.cpp  photo-caches.h  photo-data.cpp  photo-data.h  photo-edit-command.h  photo-edit-thread.cpp  photo-edit-thread.h  photo-image-provider.cpp  photo-image-provider.h  photo-metadata.cpp  photo-metadata.h  photo.cpp  photo.h
modules/Ubuntu/Components/Extras/plugin/share/: accounts.cpp  accounts.h  imagefilehack.cpp  imagefilehack.h  imageresizer.cpp  imageresizer.h  notifyqml.cpp  notifyqml.h
modules/Ubuntu/Components/Extras/plugin/tabsbar/: drag-helper.h
po/: CMakeLists.txt  aa.po  af.po  am.po  ar.po  ast.po  az.po  be.po  bg.po  bn_BD.po  br.po  bs.po  ca.po  ca@valencia.po  cs.po  cy.po  da.po  de.po  el.po  en_AU.po  en_GB.po  en_US.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fo.po  fr.po  fr_CA.po  gd.po  gl.po  gu.po  he.po  hr.po  hu.po  ia.po  id.po  is.po  (+45 more)
src/Ubuntu/Components/Extras/: CMakeLists.txt  components.cpp  components.h
src/Ubuntu/Components/Extras/Browser/: CMakeLists.txt
src/Ubuntu/Components/Extras/Browser/po/: CMakeLists.txt  ca.gmo  de.gmo  es.gmo  fr.gmo  hi.gmo  hu.gmo  ko.gmo  lv.gmo  my.gmo  pl.gmo  ru.po  sr.gmo  webbrowser-plugin-translations.cbp  zh_TW.gmo
tests/: CMakeLists.txt
tests/autopilot/: CMakeLists.txt
tests/autopilot/browser/emulators/: main_window.py  runner.qml
tests/autopilot/browser/tests/: __init__.py  test_addressbar_action_button.py  test_addressbar_selection.py  test_addressbar_states.py  test_backforward.py  test_chromeless.py  test_errorsheet.py  test_history.py  test_progressbar.py  test_title.py  test_toolbar.py
tests/autopilot/ubuntu_ui_extras/: __init__.py
tests/autopilot/ubuntu_ui_extras/browser/: __init__.py
tests/autopilot/ubuntu_ui_extras/browser/emulators/: main_window.py  runner.qml
tests/autopilot/ubuntu_ui_extras/browser/tests/: __init__.py  test_addressbar_action_button.py  test_addressbar_selection.py  test_addressbar_states.py  test_chromeless.py  test_errorsheet.py  test_history.py  test_progressbar.py  test_tabs.py  test_title.py  test_toolbar.py
tests/autopilot/ubuntu_ui_extras/example/: __init__.py
tests/autopilot/ubuntu_ui_extras/example/emulators/: main_window.py  runner.qml
tests/autopilot/ubuntu_ui_extras/example/tests/: __init__.py  test_addressbar_action_button.py  test_addressbar_selection.py  test_addressbar_states.py  test_backforward.py  (+4 more)
tests/qml/: CMakeLists.txt  tst_ActionsBar.qml  tst_BusyIndicator.qml  tst_CropDragArea.qml  tst_PhotoEditor.qml
tests/unittests/: CMakeLists.txt  sampledata.qrc  tst_AddressBar.qml  tst_Chrome.qml  tst_ExampleDelegate.qml  tst_ExampleModelTests.cpp  tst_PhotoEditorImageProvider.qml  tst_PhotoEditorPhoto.cpp  tst_PhotoEditorPhotoImageProvider.cpp  tst_ShareImageResizer.cpp
tests/unittests/Printers/: CMakeLists.txt  mockbackend.h  tst_drivermodel.cpp  tst_jobfilter.cpp  tst_jobmodel.cpp  tst_printer.cpp  tst_printerdevice.cpp  tst_printerdevicemodel.cpp  tst_printerfilter.cpp  tst_printerjob.cpp  tst_printermodel.cpp  tst_printers.cpp  tst_signalhandler.cpp  tst_signalratelimiter.cpp
